index.css
@font-face {
    font-family: 'League Spartan';
    src: url('fonts/subset-LeagueSpartan-Bold.eot');
    src: url('fonts/subset-LeagueSpartan-Bold.eot?#iefix') format('embedded-opentype'),
        url('fonts/subset-LeagueSpartan-Bold.woff') format('woff'),
        url('fonts/subset-LeagueSpartan-Bold.ttf') format('truetype');
    font-weight: bold;
    font-style: normal;
}

body {
    overflow-x: hidden;
}

.wrapper {
    position: relative;
    width: 1225px;
    margin: 0 auto;
    padding: 0 10px;
}

/* Header styling */

.header {
    margin-top: 38px;
    padding-bottom: 43px;
}

.header__logo {
    margin-right: 192px;
}

.navigation {
    display: inline-block;
}

.navigation__list {
    padding: 13px 0;
    margin: 0;
}

.navigation__item {
    list-style-type: none;
    display: inline-block;
    margin-right: 43px;
}

.navigation__item:last-child {
    margin-right: 0;
}

.navigation__link {
    font-size: 9px;
    opacity: 0.9;
    color: #0b0c11;
    text-transform: uppercase;
    text-decoration: none;
    letter-spacing: 5px;
    height: 100%;

}

.navigation__link:hover {
    color: #5da8ef;
}

/* section primary-slider */

.primary-slider {
    position: relative;
    margin-bottom: 190px;
}

.primary-slider__content {
    position: absolute;
    transform: translateY(-50%);
    top: 50%;
    width: 100%;
}

.primary-slider__subtitle {
    opacity: 0.9;
    color: #5da8ef;
    font-size: 9px;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 6px;
}

.primary-slider__title {
    margin: 0;
    color: #0b0c11;
    font-size: 62px;
    font-weight: 700;
    padding-top: 11px;
    padding-bottom: 13px;
    line-height: 64px;
}

.primary-slider__paragraph {
    width: 32%;
    color: #8f8f8f;
    font-size: 14px;
    font-weight: 300;
    line-height: 24px;
    margin: 0;
    padding: 0;
}

.primary-slider__image {
    box-shadow: -7px 19px 20px 5px #d9d9d9;
}

.slider-controls {
    position: absolute;
    bottom: 3px;
}

.slider-controls__pages {
    color: #ebebeb;
    font-size: 10px;
    font-weight: 700;
    line-height: 37px;
    text-transform: uppercase;
}

.slider-controls__page {
    color: #262626;
}

.slider-controls__page--active {
    color: #5da8ef;
}

.slider-controls__left-arrow {
    margin-right: 15px;
    cursor: pointer;
    padding: 7px;
}

.slider-controls__left-arrow:hover > path,
.slider-controls__right-arrow:hover > path {
    fill: #5da8ef;
}

.slider-controls__right-arrow {
    margin-left: 15px;
    cursor: pointer;
    padding: 7px;
}


/* social-bar section */

.social-bar {
    position: absolute;
    top: 11px;
    right: -54px;
    height: 640px;
}

.social-bar__title {
    opacity: 0.2;
    text-transform: uppercase;
    font-size: 9px;
    color: #0b0c11;
    font-weight: 700;
    letter-spacing: 6px;
    -ms-transform: rotate(180deg); /* IE 9 */
    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
    transform: rotate(180deg);
    writing-mode: vertical-lr;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    max-height: 420px;
}

.social-icons {
    bottom: -10px;
    position: absolute;
    left: 50%;
    margin-left: -10px;
    text-align: center;
}

.social-icons__anchor {
    text-decoration: none;
    display: block;
    margin-bottom: 23px;
}

.social-icons__anchor:last-child {
    margin-bottom: 0;
}

.social-icons__icon > path {
    transition: fill 0.5s;
}
.social-icons__icon:hover > path {
    fill: #5da8ef;
}

/* media-content section */

.quote {
    margin: 0 auto;
    width: 610px;
    padding-bottom: 62px;
}

.quote__content {
    opacity: 0.9;
    color: #333333;
    font-size: 26px;
    font-weight: 400;
    line-height: 38px;
    width: 610px;
    display: block;
    text-align: center;
}

q:before, q:after{ content: "";}

.quote__author {
    opacity: 0.9;
    color: #333333;
    font-size: 9px;
    font-weight: 700;
    line-height: 55px;
    text-transform: uppercase;
    letter-spacing: 5px;
    display: block;
    text-align: center;
    margin-bottom: 30px;
}

.quote::after {
    display: block;
    content: "";
    text-align: center;
    height: 100px;
    width: 2px;
    margin: 0 auto;
    background-color: #5da8ef;
}

.gallery {
    position: relative;
    height: 592px;
}

.gallery__image-col-2 {
    position: absolute;
    top: 43px;
    z-index: 1;
    right: 2px;
}

.gallery__content {
    bottom: 13px;
    position: absolute;
    left: 9%;
}

.gallery__play {
    width: 68px;
    height: 68px;
    box-shadow: -2px -2px 35px rgba(0, 0, 0, 0.13);
    background-color: #5da8ef;
    border-radius: 50%;
    position: absolute;
    z-index: 2;
    bottom: 40%;
    right: 27%;
}

.gallery__play::after {
    content: "";
    width: 0;
    height: 0;
    border-top: 14px solid transparent;
    border-bottom: 14px solid transparent;
    border-left: 14px solid white;
    position: absolute;
    top: 30%;
    left: 45%;
}

.gallery__text {
    opacity: 0.65;
    color: #616161;
    font-size: 14px;
    font-weight: 300;
    line-height: 24px;
    width: 45%;
    display: block;
    margin-bottom: 40px;
}

.read-more {
    display: inline-block;
    color: #333333;
    font-size: 9px;
    font-weight: 700;
    text-transform: uppercase;
    text-decoration: none;
    letter-spacing: 5px;
    padding-bottom: 7px;
    position: relative;
}

.read-more::after {
    display: block;
    content: "";
    position: absolute;
    width: 100%;
    height: 2px;
    background-color: #5da8ef;
    margin-left: -3.5px;
    margin-top: 6px;
}


/* used fonts */

.font-primary {
    font-family: "League Spartan", Arial, Tahoma, sans-serif;
}

.font-secondary {
    font-family: "Playfair Display", "Times New Roman", serif;
}

.font-tertiary {
    font-family: "Poppins", Arial, Tahoma, sans-serif;
}


.left {float: left;}
.right {float: right;}

/* https://css-tricks.com/snippets/css/clear-fix/ */
.group:after {
    content: "";
    display: table;
    clear: both;
}

